--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-This downloads, builds, and create a chroot for a R/Shiny/Lagun server listening on localhost:8080.
+This downloads, builds, and create a chroot for a R/Shiny/Lagun server listening on *:8080.
 
 Dependencies : usual utilities (including unshare(1)), git, rsync, opendoas (or sudo symlinked to doas).
 
