--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 This downloads, builds, and create a chroot for a R/Shiny/Lagun server listening on *:8080.
 
-Dependencies : usual utilities (including unshare(1)), git, rsync, opendoas (or sudo symlinked to doas).
+Dependencies : Linux kernel with namespaces (mount, user, PID), usual utilities (including unshare(1)), git, rsync, opendoas (or sudo symlinked to doas).
 
 The build is not made in a safe container.
 
