--- a/README
+++ b/README
@@ -2,7 +2,7 @@ This downloads, builds, and create a chroot for a R/Shiny/Lagun server listening
 
 Dependencies : Linux kernel with namespaces (mount, user, PID), usual utilities (including unshare(1)), git, rsync, opendoas (or sudo symlinked to doas).
 
-The build is not made in a safe container (no pivot_root/umount, no capability drop, seccomp, no IPC/network isolation...), don't run it as privilegied user.
+The build is not made in a safe container (no pivot_root/umount, no capability drop, no seccomp, no IPC/network isolation...), don't run it as privilegied user.
 
 root privileges are required to create /dev/{random,urandom,full,null,zero} (the scripts will use doas to do this, run them as normal user).
 
@@ -13,7 +13,7 @@ Then, to extract the relevant files in a rootfs directory, and create rootfs.tar
    $ MAKEDEV=1 ./03_mkroot
 (again, you'll need to be able to doas root to create the same special nodes in rootfs/dev)
 
-and test using:
+and test using (unsafe container, see above):
    $ ./99_enter_rootfs /entry
 
 If you use a proper container runtime (recommended) you can run
