--- a/README
+++ b/README
@@ -1,6 +1,8 @@
 This downloads, builds, and create a chroot for a R/Shiny/Lagun/TTYd server 
 listening on *:8080.
 
+The rootfs is built from Alpine Linux distribution <https://alpinelinux.org>.
+
 Dependencies : Linux kernel with namespaces (mount, user, PID), usual utilities 
 (including unshare(1)), git, rsync, opendoas (or sudo symlinked to doas).
 
