--- a/README
+++ b/README
@@ -19,6 +19,8 @@
        from CRAN other than the preinstalled packages).
      * Each terminal session runs in a separate container.
      * The launcher for this app is in apps/terminal/launch0.
+     * R integrated help is stripped to save space; you are supposed to
+       have an online browser anyway.
 
    Each app is run in a separate container; it consists of an R process
    (or ttyd process) listening on a Unix domain socket.
