--- a/README
+++ b/README
@@ -1,7 +1,6 @@
    This server runs multiple apps:
 
-   [1]Lagun with the following changes (see loadPackages.R, app.R and
-   evaluateDOE.R):
+   [1]Lagun with the following changes (see files in lagun-mod/):
      * don't use renv; all dependencies are at their latest version on
        CRAN
      * send keepalive messages on the websocket every 140 s
@@ -19,10 +18,13 @@
      * No network access is permitted in this app (so no install.packages
        from CRAN other than the preinstalled packages).
      * Each terminal session runs in a separate container. Files are
-       separated between sessions; if you don't want this, there is a
+       separated between sessions. If you don't want this, there is a
        "shared_files_terminal" applications in apps/ that you can run by
-       removing the "off" file in its directory.
-     * The launcher for this app is in apps/terminal/launch0.
+       removing the "off" file in its directory. In this shared mode, even
+       the pseudo tty files are readable and writable.
+     * The launcher for this app is in apps/terminal/launch0, it calls
+       utility programs in src/dropcap-inner.c and src/dropcap-outer.c for
+       setting up the namespaces, filesystem layout and capabilities.
      * R integrated help is stripped to save space; you are supposed to
        have an online browser anyway.
 
