--- a/README
+++ b/README
@@ -28,8 +28,9 @@
      * R integrated help is stripped to save space; you are supposed to
        have an online browser anyway.
 
-   Each app is run in a separate container; it consists of an R process
-   (or ttyd process) listening on a Unix domain socket.
+   Each app is run in a separate container (see src/dropcap*.c) ; it
+   consists of an R process (or ttyd process) listening on a Unix domain
+   socket.
 
    An HTTP frontend server (source in src/relayttpd.c) dispatches requests
    from outside TCP connections to these Unix sockets, depending on the
@@ -48,15 +49,18 @@
 
 $ tar xf shiny-rootfs.tar.xz
 $ doas cp -a /dev/*random /dev/ptmx rootfs/dev/
-$ ./99_enter_pivotroot /entry_multi # or use your favorite container runtime
+$ ./99_enter_pivotroot /entry_multi
 
-   or use the included Dockerfile.
+   Alternatively, there is an [4]OCI runtime-compliant config.json to run
+   from the untarred rootfs (using, for instance [5]crun). Or use the
+   included Dockerfile to create a single-layer container from the
+   prebuilt rootfs.
 
    You can customize the apps in the "/apps" directory of the rootfs. A
-   template "testapp" is included, remove the "off" file to get it run.
-   The rootfs can also be built with
+   template Shiny app "testapp" is included, remove the "off" file to get
+   it run. The rootfs can also be built with
 
-# create the [4]Alpine Linux build chroot
+# create the [6]Alpine Linux build chroot
 $ ./01_mkbuild
 # build R and required R packages
 $ ./02_build
@@ -74,15 +78,17 @@ $ ./03_mkroot
    PID), usual utilities (including unshare(1)), git, rsync, opendoas (or
    sudo symlinked to doas).
 
-   [5]Main source repository
+   [7]Main source repository
 
-   Author : [6]Alexandre Janon
+   Author : [8]Alexandre Janon
 
 References
 
    1. https://gitlab.com/drti/lagun
    2. https://tsl0922.github.io/ttyd/
    3. https://janona.perso.math.cnrs.fr/shiny-rootfs.tar.xz
-   4. https://alpinelinux.org/
-   5. https://github.com/alex14fr/lagun-shiny-deploy
-   6. mailto:alexandre[.]janon[at]u-psud[.]fr
+   4. https://specs.opencontainers.org/runtime-spec/config/
+   5. https://github.com/containers/crun
+   6. https://alpinelinux.org/
+   7. https://github.com/alex14fr/lagun-shiny-deploy
+   8. mailto:alexandre[.]janon[at]u-psud[.]fr
