--- a/README
+++ b/README
@@ -79,6 +79,10 @@ $ ./03_mkroot
    PID), usual utilities (including unshare(1)), git, rsync, opendoas (or
    sudo symlinked to doas).
 
+   R configure flags are defined in x02_buildR, you may want to review and
+   change them if you want to use a specific BLAS or enable OpenMP for
+   multithreading.
+
    [7]Main source repository
 
    Author : [8]Alexandre Janon
