--- a/README.man
+++ b/README.man
@@ -1,9 +1,6 @@
-.LP
 This server runs multiple R apps: Lagun and a R terminal.
 
-.SH 
 LAGUN <https://gitlab.com/drti/lagun>
-.sp
 
 The following changes are applied :
 
@@ -15,9 +12,7 @@ The following changes are applied :
 
 See files in the lagun-mod directory.
 
-.SH
-R terminal
-.sp
+R TERMINAL
 
 - Uses ttyd <https://tsl0922.github.io/ttyd/> and provides you with an R terminal on the web.
 
@@ -37,9 +32,7 @@ R terminal
 
 See files in apps/terminal.
 
-.SH
 CONTAINERIZATION
-.sp
 
 - Each app is run in separate Linux namespaces (see src/dropcap*.c) ; it consists of an R process (or ttyd process) listening on a Unix domain socket. 
 
@@ -47,9 +40,7 @@ CONTAINERIZATION
 
 - This server also serves a static HTML page (in /tmp/index.html, generated in /entry) as home page, and supports cacheing of the homepages of each app (src/httpget.c, triggered by /entry, is used to populate this cache, in plain and gzip encoding variants). Some apps may not support it, it can be disabled by leaving a file named "no_home_cache" in the app directory.
 
-.SH 
 RUN ON YOUR PREMISES (Linux/x86_64 only)
-.sp
 
 One option is to download the prebuilt x86_64 rootfs file at <https://janona.perso.math.cnrs.fr/shiny-rootfs.tar.xz>, then
 
